@@ -1,3 +1,8 @@
+2008-04-15 svu
+
+	* libxklavier/xkl_config_item.h, libxklavier/xklavier_config.c,
+	tests/test_config.c: processing the language lists
+
 2008-04-14 svu
 
 	* configure.in, libxklavier/xkl_config_item.h,
